design: ensure options icon is center-aligned

--- a/includes/settings/scss/_app-card.scss
+++ b/includes/settings/scss/_app-card.scss
@@ -32,7 +32,7 @@
 .app-card .heading button.options {
 	min-height: 32px;
 	min-width: 32px;
-	padding: 5px;
+	padding: 5px 5px 5px 8px;
 }
 
 .card-content ul {
